refactor: 인스턴스 변수명을 클래스명과 다르게 변경